Fixes description output and overzealous @extend replacement
Corrects typo in block.inc.php that prevented the description from
displaying correctly. Adds support for descriptions that contain
' - ' so the description is not prematurely truncated.

Adds getMarkupNormal to section to replace the $modifierClass variable
with a replacement variable that defaults to an empty string. Updates
block example to include {class} replacement for $modifierClass.

Corrects situation where @extend class names could replace more than
just the class names. Handles situation where a class name matches an
element name in the markup (e.g. .button).

Adds correction to margin for better display of .styleguide

Adds unit tests for new methods.

--- a/example/css/styleguide.css
+++ b/example/css/styleguide.css
@@ -1,5 +1,5 @@
 .styleguide {
-    margin: 15px 0;
+    margin: 15px auto;
     background: rgba(255, 255, 255, 0.5);
     border: 1px solid #ddd;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
